# todo.house

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DEPLOY.md  LICENSE  PWA_VALIDATION.md  README.md  app.json  babel.config.js  biome.json  codecov.yml  eas.json  expo-screenshots-workflow.yml  frontend-tests.yml  jest-setup.js  jest.config.js  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  seed-data.json  start-dev.sh  tamagui-web.css  tamagui.config.ts  terragon-setup.sh  test-screenshots.md  tsconfig.json
backend/: .env.example  README.md  alembic.ini  build.sh  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  run.py  run_tests.py  start.sh  task6_implementation_summary.md  test.db  test_manual_image_endpoint.py  test_server.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  2c45598d0a4f_add_name_and_avatar_url_to_users_table.py  2f14bca5bdda_add_locale_preference_column_to_users.py  a773fa5a991f_initial_schema.py  a8a641084c80_add_locale_preference_to_users.py  b234fa5b123c_add_locations_table_and_task_location_reference.py
backend/app/: ai_task_service.py  auth.py  auth_simple.py  config.py  database.py  images.py  locale_detection.py  locations.py  logging_config.py  main.py  middleware.py  models.py  storage.py  tasks.py  user_settings.py
backend/app/ai/: __init__.py  providers.py  (+4 more)
backend/docs/: flexible-task-model.md
backend/examples/: ai_provider_demo.py  image_analysis_demo.py  prompt_testing_demo.py  prompt_testing_example.py  structured_logging_demo.py  test_custom_images.py
backend/supabase/: seed.sql
backend/tests/: README.md  conftest.py  test_ai_task_endpoints.py  test_engine_unit.py  test_enhanced_fields_unit.py  test_health.py  test_image_analysis_endpoint.py  test_integration_example.py  test_locations_additional_unit.py  test_locations_unit.py  test_mixin_unit.py  test_populate_image_urls_unit.py  test_snooze_service_unit.py  test_tasks_additional_unit.py  test_tasks_populate_data_unit.py  test_tasks_single_view.py  test_tasks_with_locations_unit.py  test_todos.py  test_todos_integration.py  test_todos_unit.py
(+515 files in other folders)
